recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:7: error: type mismatch;
 found   : Int
 required: List[Int]
	return remove(l.head, v);
                        ^